--- a/css/style2.css
+++ b/css/style2.css
@@ -10,7 +10,10 @@ ul{
 .nav{
     display: flex;
     justify-content: right;
-    margin: 0 100px 0;
+    margin: 0 50px 0px 750px;
+    padding: 0 10px;
+    width: 650px;
+
 }
 .nav_item{
     margin: 0 5px;
