--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,11 @@
+.header{
+    display: flex;
+    justify-content: space-between;
+}
 .logo{
     font-size: 25px;
-    margin: 30px 30px 0px 10px;
+    margin: 20px 30px 0 20px;
+    width: 200px;
     font-weight: bold;
     display: inline-block;
 }
@@ -10,10 +15,9 @@ ul{
 .nav{
     display: flex;
     justify-content: right;
-    margin: 0 50px 0px 750px;
-    padding: 0 10px;
-    width: 350px;
-
+    margin: 20px 0px 0 20px;
+    padding: 0 10px 0 200px;
+    width: 500px;
 }
 .nav_item{
     margin: 0 5px;
@@ -26,6 +30,7 @@ ul{
 .title{
     display: inline-block;
     margin: 350px 0 0 0 ;
+    width: 400px;
     text-align: left;
     font-size: 60px;
     font-weight: 200px;
@@ -36,17 +41,17 @@ ul{
     left: 0px;
 }
 .box{
-    width: 850px;
+    width: 1200px;
     height: 200px;
     background-color: #0000ae;
 }
 .absolute {
     position: absolute;
     top: -350px;
-    left: 450px;
+    left: 820px;
 }
 img{
-    width: 700px;
+    
     height: 450px;
 }
 
