--- a/css/style2.css
+++ b/css/style2.css
@@ -39,18 +39,22 @@ ul{
     position: relative;
     top: 0px;
     left: 0px;
+    z-index: 0;
 }
 .box{
-    width: 1200px;
+    width: 80%;
     height: 200px;
     background-color: #0000ae;
 }
 .absolute {
     position: absolute;
-    top: -350px;
-    left: 70%;
+    top: 100px;
+    left: 55%;
+    z-index: 10;
+
 }
 img{
+    width: 100%;
     height: 450px;
 }
 
